<resources>
    <string name="app_name">catch-up</string>
    <string name="play">Play</string>
    <string name="explore">Explore</string>
    <string name="saved_lists">Saved Lists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to register</string>
    <string name="Logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="click_to_sign_in">Click to Sign In</string>
    <string name="game_options">Game Options</string>
    <string name="create_catch_up">Create Catch-Up</string>
    <string name="join_catch_up">Join Catch-Up</string>
    <string name="cancel_button">Cancel button</string>
    <string name="list">List</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string name="select_game_type">Select Game Type:</string>
</resources>