<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bkg"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:src="@drawable/remove_rounded_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/game_options"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginStart="130dp"
            android:contentDescription="@string/cancel_button"
            android:src="@drawable/close_rounded_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_game_button"
            style="@style/ButtonBackground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_square_background"
            android:fontFamily="@font/roboto"
            android:text="@string/create_catch_up"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/join_game_button"
            style="@style/ButtonBackground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_square_background"
            android:fontFamily="@font/roboto"
            android:text="@string/join_catch_up"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
