<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/catchup_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/select_game_type"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/game_type_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/list_option_button"
                    style="@style/ButtonBackground"
                    android:layout_width="250dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_square_background"
                    android:backgroundTint="@color/catchup_grey_light"
                    android:fontFamily="@font/roboto"
                    android:text="@string/list"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/circle_background"
                    android:elevation="2dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/location_option_button"
                    style="@style/ButtonBackground"
                    android:layout_width="254dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_square_background"
                    android:fontFamily="@font/roboto"
                    android:text="@string/location"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="start|top"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/circle_background"
                    android:elevation="2dp" />
            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/done_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/game_type_options"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/roboto"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
